state machine in server. Loading message while player waits in queue. Locks for simple and ranked gamemode. Server and Client use comunications class and the comunications class does broadcast and message encodings